@@ -1,3 +1,8 @@
+Mon Jun  9 21:18:46 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* cthreads.c (cthread_fork): Delete debugging oddity that crept
+	into source.
+
 Thu Apr  3 20:29:27 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
 
 	* i386/csw.S: Define __ELF__ too.
